# AI-math24

./: .gitignore  .gitignore.backup  DEPLOYMENT.md  DOCKER_QUICK_REFERENCE.md  README.md  docker-compose.yml  test-docker.sh
backend/: .dockerignore  Dockerfile  Makefile  main.py  pyproject.toml  test_gemini.py  test_main.py
math24-game/: .dockerignore  Dockerfile  Makefile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
math24-game/src/: App.tsx  Math24Game.css  Math24Game.tsx  index.css
math24-game/src/test/: App.test.tsx  Math24Game.test.tsx
